tests/compile_fail/guard_placeholder_alias_removed.cpp
#include <ptn/patternia.hpp>

int main() {
  auto pred = ptn::_1 > 0;
  (void)pred;
  return 0;
}
